dataset1235/2025-2/610742602/users/1362015512/executions/906907063_291286518.log
== SUBMISSION (2025-08-19 21:49:56)
-- CODE: 



num=(input("Digite o numero: "))


print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 12341234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 56785678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 444444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 1111
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:43:12)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:50:11)
-- CODE: 



num=(input("Digite o numero: "))


print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 12341234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 56785678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 444444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 1111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:42:53)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:51:00)
-- CODE: 



num=int(input("Digite o numero: "))



-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:42:55)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:48:49)
-- CODE: 



num=(input("Digite o numero:"))


print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:12341234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:56785678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:444444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:1111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:41:20)
-- CODE: 
numero="333"
print(input(numero))
num = int(2*4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
333256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
3331234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
3335678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
333444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
33311
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:38:44)
-- CODE: 
numero="333"
print(input(numero))
# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
333256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
3331234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
3335678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
333444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
33311
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:49:55)
-- CODE: 



num=(input("Digite o numero: "))


print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 12341234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 56785678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 444444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 1111
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:51:29)
-- CODE: 



num=int(input("Digite o numero: "))


print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:49:25)
-- CODE: 



num=(input("Digite o numero: "))


print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 12341234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 56785678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 444444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 1111
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:49:42)
-- CODE: 



num=(input("Digite o numero: "))


print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 12341234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 56785678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 444444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 1111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:48:56)
-- CODE: 



num=(input("Digite o numero:"))


print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:12341234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:56785678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:444444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:1111
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:51:33)
-- CODE: 



num=int(input("Digite o numero: "))


print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:40:46)
-- CODE: 
numero="333"
print(input(numero))
num = int(numero)

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
333256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
3331234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
3335678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
333444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
33311
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:37:40)
-- CODE: 
numero="333"
print(input(numero))
# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
333256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
3331234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
3335678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
333444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
33311
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:51:48)
-- CODE: 



num=int(input("Digite o numero: "))


print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:49:17)
-- CODE: 



num=(input("Digite o numero: "))


print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 12341234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 56785678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 444444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 1111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:49:05)
-- CODE: 



num=(input("Digite o numero:"))


print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:12341234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:56785678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:444444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:1111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:41:05)
-- CODE: 
numero="333"
print(input(numero))
num = int(2*numero)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
333256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
3331234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
3335678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
333444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
33311
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:49:29)
-- CODE: 



num=(input("Digite o numero: "))


print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero: 256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero: 12341234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero: 56785678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero: 444444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero: 1111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:46:50)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:42:52)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 21:41:13)
-- CODE: 
numero="333"
print(input(numero))
num = int(2*4
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 3
    num = int(2*4
             ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 3
    num = int(2*4
             ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 3
    num = int(2*4
             ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 3
    num = int(2*4
             ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 3
    num = int(2*4
             ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
